# resonant-archive

./: .gitignore  CHANGELOG.md  CLOUD_IMPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_GUIDE.md  START_HERE.md  START_MAC_LINUX.sh  START_WINDOWS.bat  TROUBLESHOOTING.md  USAGE_GUIDE.md  claude_desktop_config_example.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
resonant_archive/: __init__.py  chunker.py  cli.py  daemon.py  embed.py  mcp_server.py  store.py
skills/: resonant-archive.md
tests/: test_chunker.py  test_store.py
