[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resonant-archive"
version = "0.1.0"
description = "Local-first retrieval tool for AI conversation archives and arbitrary text corpora. Part of the Resonant ecosystem."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Codependent AI" },
]
keywords = [
  "mcp",
  "rag",
  "chatgpt",
  "claude",
  "archive",
  "semantic-search",
  "resonant",
  "local-first",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "sentence-transformers>=2.2.2",
  "chromadb>=0.4.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "mcp>=0.9.0",
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
  "python-frontmatter>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.21.0",
]

[project.scripts]
resonant-archive = "resonant_archive.cli:main"

[project.urls]
Homepage = "https://codependentai.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["resonant_archive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
